// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "ratio": "3:2",
              "url": "https://image-2.io",
            }
          }
        />
      </div>
    </div>
  </div>
  <aside>
    <RelatedArticles
      slice={
        Object {
          "items": Array [
            Object {
              "__typename": "Article",
              "byline": Array [],
              "headline": "RA Headline",
              "id": "ra-1",
              "label": "RA Label",
              "leadAsset": Object {
                "__typename": "Image",
                "crop169": Object {
                  "__typename": "Crop",
                  "url": "https://racrop169.io",
                },
                "crop32": Object {
                  "__typename": "Crop",
                  "url": "https://racrop32.io",
                },
                "title": "RA Title",
              },
              "publicationName": "TIMES",
              "publishedTime": "2015-03-23T19:39:39.000Z",
              "summary105": Array [],
              "summary125": Array [],
              "summary145": Array [],
              "summary160": Array [],
              "summary175": Array [],
              "summary225": Array [],
              "url": "https://ra.io",
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;

exports[`2. an inline image 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <header>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
        </div>
      </div>
      <div>
        <div>
          <div>
            <span>
              <DatePublication
                date="2015-03-13T18:54:58.000Z"
                publication="TIMES"
              />
            </span>
          </div>
        </div>
      </div>
      <div />
    </header>
    <div>
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A Caption",
              "credits": "Some Credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "ratio": "9:4",
              "url": "https://image-inline.io",
            }
          }
        />
      </div>
    </div>
  </div>
  <aside>
    <RelatedArticles
      slice={
        Object {
          "items": Array [
            Object {
              "__typename": "Article",
              "byline": Array [],
              "headline": "RA Headline",
              "id": "ra-1",
              "label": "RA Label",
              "leadAsset": Object {
                "__typename": "Image",
                "crop169": Object {
                  "__typename": "Crop",
                  "url": "https://racrop169.io",
                },
                "crop32": Object {
                  "__typename": "Crop",
                  "url": "https://racrop32.io",
                },
                "title": "RA Title",
              },
              "publicationName": "TIMES",
              "publishedTime": "2015-03-23T19:39:39.000Z",
              "summary105": Array [],
              "summary125": Array [],
              "summary145": Array [],
              "summary160": Array [],
              "summary175": Array [],
              "summary225": Array [],
              "url": "https://ra.io",
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixel"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelteads"
  />
  <Ad
    contextUrl="https://url.io"
    section="Some Section"
    slotName="pixelskin"
  />
</article>
`;
